# memgame

./: highscore.txt  pyproject.toml
memgame/: __init__.py  cli.py  colors.py  config.py  events.py  game.py  state.py  state_machine.py
memgame/effects/: blocks.py  fireworks.py  lines.py
tests/: test_memgame.py
