[tool.poetry]
name = "memgame"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gpiozero = "^1.6.2"
"RPi.GPIO" = "^0.7.1"
click = "^8.1.3"
guizero = "^1.3.0"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
memgame = 'memgame.cli:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
